enterprise/operator/pkg/lb/testdata/lbservice_translation/27-http-ratelimit/input-lbservice.yaml
apiVersion: isovalent.com/v1alpha1
kind: LBService
metadata:
  namespace: default
  name: lb-1
spec:
  vipRef:
    name: lb-1
  port: 80
  applications:
    httpProxy:
      rateLimits:
        connections:
          limit: 100
          timePeriodSeconds: 60
      routes:
        - backendRef:
            name: lb-1
        - match:
            hostNames:
              - "bar.acme.io"
            path:
              exact: "/api"
          backendRef:
            name: lb-2
          rateLimits:
            requests:
              limit: 200
              timePeriodSeconds: 120
